--- a/Template_Angular7/ClientApp/package.json
+++ b/Template_Angular7/ClientApp/package.json
@@ -32,10 +32,12 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "angular-calendar": "^0.26.4",
+    "angularx-flatpickr": "^6.1.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
+    "flatpickr": "^4.5.2",
     "ngx-bootstrap": "^3.1.2",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
