--- a/Template_Angular7/Template_Angular7.csproj
+++ b/Template_Angular7/Template_Angular7.csproj
@@ -14,7 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="Mapster" Version="3.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
