--- a/Template_Angular7/ClientApp/package.json
+++ b/Template_Angular7/ClientApp/package.json
@@ -38,6 +38,7 @@
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
     "flatpickr": "^4.5.2",
+    "moment": "^2.23.0",
     "ngx-bootstrap": "^3.1.2",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
