--- a/Template_Angular7/ClientApp/package.json
+++ b/Template_Angular7/ClientApp/package.json
@@ -40,6 +40,7 @@
     "flatpickr": "^4.5.2",
     "moment": "^2.23.0",
     "ngx-bootstrap": "^3.1.2",
+    "ngx-json-viewer": "^2.4.0",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
