--- a/Template_Angular7/ClientApp/package.json
+++ b/Template_Angular7/ClientApp/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "7.0.1",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "7.0.1",
     "@angular/compiler": "7.0.1",
     "@angular/core": "7.0.1",
@@ -36,6 +37,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
+    "css-element-queries": "^1.1.1",
     "date-fns": "^1.29.0",
     "flatpickr": "^4.5.2",
     "moment": "^2.23.0",
