20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/package.json
+++ b/Template_Angular7/ClientApp/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "mobil": "ng serve --host 0.0.0.0",
     "build": "ng build --extract-css",
     "build:ssr": "npm run build -- --app=ssr --output-hashing=media",
     "test": "ng test",
