--- a/Template_Angular7/appsettings.Development.json
+++ b/Template_Angular7/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "ConnectionStrings":{
     "MyWebApiConnection" : "User ID = EkorAdmin;Password=roke_4390;Server=localhost;Port=5433;Database=GruppenVerwaltungApi;Integrated Security=true; Pooling=true;"
   },
