--- a/Template_Angular7/ClientApp/tsconfig.json
+++ b/Template_Angular7/ClientApp/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -11,38 +11,10 @@
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
-    "paths": {
-      "@app/*": ["src/app/*"],
-      "@environments/*": ["src/environments/*"]
-    }
+    "lib": ["es2018", "dom"]
+    /*"paths": {
+      "@app*//*": ["src/app*//*"],
+      "@environments*//*": ["src/environments*//*"]
+    }*/
   }
 }
-
-
-/*
-{
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
-    "paths": {
-      "@app*/
-/*": ["app*/
-/*"],
-      "@environments*/
-/*": ["environments*/
-/*"]
-    }
-  }
-}
-*/
